import "client_request_pong.proto";

package messages;

message ClientRequest {
    required string method = 1;

    optional ClientRequestPong requestPong = 2;
}