package messages;

message ClientRequestPong {
    required string text = 1;
}